--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@ body {
     font-family: Comic sans, Courier, monospace;
     color: white;
     text-shadow: 0 0 2px black, -1px -1px 2px black, 1px 0 2px black, 1px 1px 2px black;
-/* background: url('/Users/owner/BOOTCAMP/TMB/Hangman-Game/assets/images/graffitiBack.jpg') no-repeat;
-*/  
+    background: url('assets/images/gameback2.jpg') no-repeat;
+
 background-size: cover;
 }
 .container { 
